<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Незабудка</string>
    <string name="title_activity_add_reminder">Создать напоминание</string>
    <string name="title_activity_edit_reminder">Отредактировать напоминание</string>
    <string name="add_reminder">Пожалуйста, добавьте напоминание!</string>
    <string name="details">Другая информация</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="repeat">Повторить</string>
    <string name="repeat_off">Один раз</string>
    <string name="repeat_no">Интервал повторений</string>
    <string name="repeat_type">Тип повторений</string>
    <string name="action_save_reminder">Сохраните напоминание</string>
    <string name="no_reminders">Пожалуйста, нажмите на ПЛЮС, чтобы добавить напоминание!</string>
    <string name="send_report">Отправить напоминание через</string>
    <string name="tone_description">Звук для напоминания</string>
    <string name="choose_default_tone">Мелодия по умолчанию</string>
    <string name="group_by_date_desc">Сортировать по убыванию даты</string>
    <string name="group_by_date_asc">Сортировать по возрастанию даты</string>
    <string name="group_by_title_asc">Сортировать А - Я</string>
    <string name="group_by_title_desc">Сортировать Я - А</string>
    <string name="text_on">Вкл.</string>
    <string name="text_off">Выкл.</string>
    <string name="report">Отправить</string>
    <string name="choose_color">Выбрать цвет</string>
    <string name="set_app_color">Установить цвет приложения</string>
    <string name="choose_app_color">Выберите цвет приложения</string>
    <string name="repeat_set_interval_button">Кнопка выбора интервала повторения</string>
    <string name="repeat_set_button">Кнопка включения и отключения повторения</string>
    <string name="time_set_button">Кнопка установления времени</string>
    <string name="data_set_button">Кнопка установления даты</string>
    <string name="settings">Настройки</string>
    <string name="photo_view">Картинка</string>
    <string name="make_photo_button">Кнопка добавления фото</string>
    <string name="list_item_image">Картинка элемента списка</string>
    <string name="every">Раз в</string>
    <string name="choose_action">Выбери дальнейшее действие:</string>
    <string name="make_photo">Сделать фото</string>
    <string name="select_type">Выбрать тип</string>
    <string name="edited_text">Редактирован</string>
    <string name="not_blank">Напоминание не может быть пустым!</string>
    <string name="enter_number">Введите число</string>
    <string name="cancel">Отмена</string>
    <string name="saved">Сохранён</string>
    <string name="color_green">Зелёный</string>
    <string name="pink_color">Малиновый</string>
    <string name="blue_color">Синий</string>
    <string name="color_default">По умолчанию</string>
    <string name="edit_text_field">Поле редактирования напоминания. Добавьте ваше напоминание сюда</string>
    <string name="is_active">Кнопка активации напоминания. Сейчас оно активно</string>
    <string name="add_reminder_button">Кнопка добавления напоминания</string>
    <string name="cancel_or_delete_reminder">Кнопка удаления напоминания, если вы находитесь на главной странице. Если нет, то отменяет добавление/изменение напоминания</string>
    <string name="search_button">Кнопка поиска напоминания</string>
    <string name="go_to_settings_page">Кнопка перехода на страницу настроек</string>
    <string name="action_save_reminder_button">Кнопка сохранения напоминания</string>
    <string name="is_not_active">Кнопка деактивации напоминания. Напоминание будет удалено из списка</string>
    <string name="repeat_type_button">Кнопка выбора типа повторения напоминания</string>
    <string name="reminder_deleted">Удалён</string>
    <string name="minute">Минута</string>
    <string name="hour">Час</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="delete_reminder">Удалить</string>
    <string name="create_reminder_first">Сначала создайте и сохраните напоминание, а потом добавьте фотографию</string>
    <string name="ok">ОК</string>

    <string-array name="app_color">
        <item>По умолчанию</item>
        <item>Зелёный</item>
        <item>Малиновый</item>
        <item>Синий</item>
    </string-array>
</resources>
